A massive refactoring is building up...